mk-I0460: APIs aus dem Backend entfernt
